# mcst_prepro

./: CMakeLists.txt
prepro/: ast.hpp  input.txt  lexer.cpp  lexer.hpp  main.cpp  parser.cpp  parser.hpp
tests/: lexdump  lexdump.cpp  lexer_tests  lexer_tests.cpp  parsedump  parsedump.cpp
tests/inputs/: input.txt  input2.txt
